# pqc-engineering-ssec-23

./: .gitignore  README.md  README_Clion_IDE.md
c-code/: CMakeLists.txt  README.md
c-code/benchmarks/: CMakeLists.txt  benchmarks_main.c  benchmarks_utils.h
c-code/benchmarks/common/: hal-cortexa.c  hal.h
c-code/benchmarks/enable_ccr/: Makefile
c-code/src/: CMakeLists.txt  cgl_hash.c  cgl_hash.h  fp.c  fp.h  fp2.c  fp2.h  isogeny_walks.h  isogeny_walks_2.c  isogeny_walks_3.c  isogeny_walks_3_fp.c  parameters.h  utilities.c  utilities.h
c-code/src/asm/: p254.s  p255.s  p381.s  p383.s  p398.s  p511.s  p575.s  p592.s  p765.s  p783.s
c-code/src/parameters/: p254.h  p255.h  p381.h  p383.h  p398.h  p511.h  p575.h  p592.h  p765.h  p783.h
c-code/tests/: CMakeLists.txt  test_declarations.h  test_fp.c  test_fq.c  test_isogeny_walks.c  test_main.c  test_utils.h
c-code/utils/: hdr_code.py  prime_search.m
dCTIDH/: CMakeLists.txt  README.md  benchmark_opt_rad.sh
docs/: Dockerfile  Doxyfile  Doxyfile_03  _asm_a_v_x2_codegenerator_8py_source.html  _asm_karatsuba_codegenerator_8py_source.html  _asm_karatsuba_redc_8py_source.html  _asm_mont_redc32_8py_source.html  _asm_mont_redc_8py_source.html  _asm_mont_redc_a_v_x2_8py_source.html  _asm_mult_codegenerator_8py_source.html  _asm_mult_codegenerator___p_i_c_8py_source.html  _asm_mult_codegenerator__no_p_i_c_8py_source.html  analyze__bench_8py_source.html  annotated.html  annotated_dup.js  basefield__chain3_8py_source.html  bench_8c_source.html  benchmarks__main_8c_source.html  benchmarks__utils_8h_source.html  c-code_2src_2cycle_8h_source.html  c-code_2src_2fp2_8c_source.html  c-code_2src_2fp2_8h_source.html  c-code_2src_2isogeny__walks_8h_source.html  c-code_2src_2isogeny__walks__3__fp_8c_source.html  c-code_2src_2rng_8c_source.html  c-code_2src_2rng_8h_source.html  camke-build-02_2_c_make_files_23_828_83_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  camke-build-02_2benchmarks_2_c_make_files_2benchmarks-ssec-p254_8dir_2benchmarks__main_8c_8o_8d_source.html  camke-build-02_2benchmarks_2_c_make_files_2benchmarks-ssec-p255_8dir_2benchmarks__main_8c_8o_8d_source.html  camke-build-02_2benchmarks_2_c_make_files_2benchmarks-ssec-p381_8dir_2benchmarks__main_8c_8o_8d_source.html  camke-build-02_2benchmarks_2_c_make_files_2benchmarks-ssec-p383_8dir_2benchmarks__main_8c_8o_8d_source.html  camke-build-02_2benchmarks_2_c_make_files_2benchmarks-ssec-p398_8dir_2benchmarks__main_8c_8o_8d_source.html  camke-build-02_2benchmarks_2_c_make_files_2benchmarks-ssec-p511_8dir_2benchmarks__main_8c_8o_8d_source.html  camke-build-02_2benchmarks_2_c_make_files_2benchmarks-ssec-p575_8dir_2benchmarks__main_8c_8o_8d_source.html  camke-build-02_2benchmarks_2_c_make_files_2benchmarks-ssec-p592_8dir_2benchmarks__main_8c_8o_8d_source.html  camke-build-02_2benchmarks_2_c_make_files_2benchmarks-ssec-p765_8dir_2benchmarks__main_8c_8o_8d_source.html  camke-build-02_2benchmarks_2_c_make_files_2benchmarks-ssec-p783_8dir_2benchmarks__main_8c_8o_8d_source.html  camke-build-02_2src_2_c_make_files_2ssec-p254_8dir_2cgl__hash_8c_8o_8d_source.html  camke-build-02_2src_2_c_make_files_2ssec-p254_8dir_2fp2_8c_8o_8d_source.html  (+826 more)
(+41173 files in other folders)
